--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,13 @@ version = pluginVersion
 repositories {
     mavenCentral()
     jcenter()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     compile 'org.spongepowered:spongeapi:7.1.0-SNAPSHOT'
     compile 'me.lucko.luckperms:luckperms-api:4.4'
-    compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.github.Dirt-Craft:Sponge-Discord-Lib:deploy-SNAPSHOT'
 }
 
 sponge.plugin.id = pluginId
