--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,76 @@
+buildscript {
+    repositories {
+        jcenter()
+        maven { url = "https://files.minecraftforge.net/maven" }
+        maven { url = 'https://repo.spongepowered.org/maven' }
+    }
+
+    dependencies {
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath 'org.spongepowered:mixingradle:0.6-SNAPSHOT'
+    }
+}
+
 plugins {
-    id 'org.spongepowered.plugin' version '0.8.1'
+    id 'org.spongepowered.plugin' version '0.9.0'
     id 'java'
 }
 
+apply plugin: 'net.minecraftforge.gradle.forge'
+
 group = pluginGroup
 version = pluginVersion
-
-repositories {
-    mavenCentral()
-    jcenter()
-}
+sponge.plugin.id = pluginId
 
 dependencies {
-    compile 'org.spongepowered:spongeapi:7.1.0-SNAPSHOT'
+    compile 'org.spongepowered:spongeapi:7.2.0'
     compile 'me.lucko.luckperms:luckperms-api:4.4'
     compile fileTree(dir: 'libs', include: '*.jar')
 }
 
-sponge.plugin.id = pluginId
+apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'org.spongepowered.mixin'
+
+repositories {
+    mavenCentral()
+    jcenter()
+    maven { url 'https://jitpack.io' }
+    maven { url = 'https://repo.spongepowered.org/maven' }
+    maven {
+        name = 'nucleus'
+        url = 'http://repo.drnaylor.co.uk/artifactory/list/minecraft'
+    }
+}
+
+minecraft {
+    version = "1.12.2-14.23.5.2847"
+    mappings = "snapshot_20171003"
+}
+
+
+
+
+
+// OLD
+//plugins {
+//    id 'org.spongepowered.plugin' version '0.8.1'
+//    id 'java'
+//}
+//
+//group = pluginGroup
+//version = pluginVersion
+//
+//repositories {
+//    mavenCentral()
+//    jcenter()
+//}
+//
+//dependencies {
+//    compile 'org.spongepowered:spongeapi:7.1.0-SNAPSHOT'
+//    compile 'me.lucko.luckperms:luckperms-api:4.4'
+//    compile fileTree(dir: 'libs', include: '*.jar')
+//}
+//
+//
+//
+//sponge.plugin.id = pluginId
